--- a/index.html
+++ b/index.html
@@ -1,74 +1,89 @@
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <title>JS Lab</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, serif;
-        }
-
-        h1 {
-            color: #0B3954;
-        }
-		.boring {
-			color: blue;
-		}
-		.green {
-			color: green
-		}
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+    <meta name="Description" content="Ineractive game in JS - Refleksomierzacz" />
+    <meta name="Author" content="DS" />
+    <title>JS Lab - Refleksomierzacz</title>
+    <link href="game-layout.css" rel="stylesheet">
+	<script src="sourceAppCode.js"></script> 
 </head>
 <body>
 <div id="app">
-    <h1 id="main-header">Moja aplikacja</h1>
-    <p>To będzie gra. A oto co muszę zrobić:</p>
-    <ol>
-        <li class="boring">Nauczyć się HTML</li>
-        <li class="boring">Nauczyć się CSS</li>
-        <li>Nauczyć się JS</li>
-        <li id="super-important">Zaimplementować</li>
-    </ol>
-	<button type="button" onclick="removeBoringStuff()">Usuń nudne rzeczy</button>
-	<input type="text" id="myTextField">
-	<input type="checkbox" id="myCheckbox">
-	<button type="button" onclick="readValues()">Odczytaj wartości</button>
+    <h1 id="main-header">Refleksomierzacz</h1>
+    <p id="app-description">To interaktywna gra, która mierzy refleks użytkownika. Mierzony jest czas pomiędzy zmianą koloru na ekranie, a kliknięciem myszy przez użytkownika.
+		<br><br>Sprawdź się!</p>
+	<div id="game-rules">
+		<button id="rules-button" type="button" onclick="showHideRules()">Pokaż zasady gry</button>
+		<div id="game-rules-description">
+			<h3 class="panel-header">Zasady gry:</h3>
+			<ol>
+				<li>Ustal liczbę prób.</li>
+				<li>Kliknij przycisk "Start", aby rozpocząć grę.</li>
+				<li>Poczekaj na zmianę koloru w polu gry.</li>
+				<li>Postaraj się kliknąć jak najszybciej w polu gry.</li>
+			</ol>
+			<p><strong>Do dzieła! Powodzenia!</strong></p>
+			<p><span style="text-decoration: underline;">Dodatkowe info:</span></p>
+			<ul>
+				<li>W każdym momencie możesz zatrzymać grę naciskając przycisk "Stop".</li>
+				<li>Zamiast kliknięcia, możesz użyć klawisz "A" :)</li>
+			</ul>
+		</div>
+	</div>
+	<div id="attempts">
+		Wprowadź liczbę prób:
+		<input id="attemptsTextField" type="number" min="1" max="99">
+		<button id="attempts-button" type="button" onclick="readValues()">Zatwierdź</button>
+		<p id="input-alert">Wprowadzona liczba jest niepoprawna</p>
+	</div>
+    <div id="game-block">
+        <div id="game-field">
+			<h2 class="panel-header">POLE GRY:</h2>
+            <button id="game-square" type="button" onclick="clickOnColor()"></button>
+			<button id="start-stop-button" class="start-button" type="button" onclick="changeGameButton()">Start</button>
+        </div>
+        <div id="statistics-panel">
+            <h2 class="panel-header">PANEL STATYSTYK:</h2>
+            <div id="statistics-box">
+                <ul>
+                    <li>Najkrótszy czas reakcji: </li>
+                    <li>Najdłuższy czas reakcji: </li>
+                    <li>Średni czas reakcji: </li>
+					<li>Ilość kliknięć przed zmianą koloru: </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
-    //alert('Witamy witamy');
-		// szukanie po id:
-	/*const header = document.getElementById('main-header');
-	alert(header.innerText);
-		// szukanie po selektorach (tak jak w CSS):
-	const nudy = document.querySelectorAll("#app .boring");
-	nudy.forEach(element => {
-		alert(`Nuda: ${element.innerText}`);
-		element.classList.remove('boring'); //usuwanie klasy boring, więc niebieski kolor nie będzie już aplikowany
-	});*/
+	let buttonClickCounter = 0;
+    let reactionTime = 0;
+    let colorChangeTime = 0;
+	let colorChangeCounter = 0;
+    let colorChange = false;
+	let attempts = 5;
+    let reactionTimeList = [];
+	let reactionTimesSum = 0;
+	let gameFieldClickCounter = 0;
 
-	let div = document.createElement('div');
-	div.classList.add('green'); //dodawanie klasy green
-	div.innerText = 'Zielony tekst (jeśli dodasz CSS)';
-	document.getElementById('app').append(div); // jest też prepend
+	document.getElementById('statistics-panel').style.display = 'none';
+	document.getElementById('game-rules-description').style.display = 'none';
+	document.getElementById('input-alert').style.display = 'none';
 
-	let listItem = document.createElement('li');
-	listItem.innerText = 'Zagrać';
-	// dodaję na koniec listy
-	document.querySelector("#app ol li:last-child").after(listItem); // jest też before
+	// ------ Tryb gry, w którym zamiast klikania można wcisnąć przycisk na klawiaturze: ------
+	window.addEventListener(
+		"keydown",
+		(event) => {
+			const keyCode = event.code;
 
-	function removeBoringStuff() {
-		document.querySelectorAll("#app .boring").forEach((e) => e.remove());
-	}
-
-	function readValues() {
-		const checked = document.getElementById("myCheckbox").checked;
-		if(checked){
-			const text = document.getElementById("myTextField").value;
-			alert(text);
-		}
-	}
-
+			if (keyCode === 'KeyA') {
+				clickOnColor();
+				return;
+			}
+		},
+		false
+	);
 </script>
 </body>
 </html>
