Calculation of average response time corrected (part 2) and game counter adder

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <li>Najdłuższy czas reakcji: </li>
                     <li>Średni czas reakcji: </li>
 					<li>Ilość kliknięć przed zmianą koloru: </li>
+					<li>Liczba gier: </li>
                 </ul>
             </div>
         </div>
@@ -66,6 +67,7 @@
     let reactionTimeList = [];
 	let reactionTimesSum = 0;
 	let gameFieldClickCounter = 0;
+	let gamesCounter = 0;
 
 	document.getElementById('statistics-panel').style.display = 'none';
 	document.getElementById('game-rules-description').style.display = 'none';
