Corrected game descriptions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="game-rules-description">
 			<h3 class="panel-header">Zasady gry:</h3>
 			<ol>
-				<li>Ustal liczbę prób.</li>
+				<li>Ustal liczbę zmian koloru podczas gry.</li>
 				<li>Kliknij przycisk "Start", aby rozpocząć grę.</li>
 				<li>Poczekaj na zmianę koloru w polu gry.</li>
 				<li>Postaraj się kliknąć jak najszybciej w polu gry.</li>
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<div id="attempts">
-		Wprowadź liczbę prób:
+		<strong>NOWA GRA</strong> - wprowadź liczbę zmian koloru:
 		<input id="attemptsTextField" type="number" min="1" max="99">
 		<button id="attempts-button" type="button" onclick="readValues()">Zatwierdź</button>
 		<p id="input-alert">Wprowadzona liczba jest niepoprawna</p>
@@ -49,7 +49,7 @@
                 <ul>
                     <li>Najkrótszy czas reakcji: </li>
                     <li>Najdłuższy czas reakcji: </li>
-                    <li>Średni czas reakcji: </li>
+                    <li>Średni czas reakcji w bieżącej grze: </li>
 					<li>Ilość kliknięć przed zmianą koloru: </li>
 					<li>Liczba gier: </li>
                 </ul>
